Changes to build the api to do transactions - No tests
